# ChangeLog for app-misc/hal-info
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/hal-info/Attic/ChangeLog,v 1.26 2008/01/10 18:04:00 jer Exp $

  10 Jan 2008; Jeroen Roovers <jer@gentoo.org> hal-info-20071011.ebuild,
  hal-info-20071030.ebuild:
  Marked ~hppa again (no bug reference in particular as these keywords should
  not have been dropped in the first place...).

*hal-info-20071030 (06 Jan 2008)

  06 Jan 2008; Saleem Abdulrasool <compnerd@gentoo.org>
  +files/01_dell_cdrom_nopoll.patch,
  +files/02_hardware_brightness_fixups.patch,
  +files/03_feiya_memory_bar.patch, +hal-info-20071030.ebuild:
  Version bump from upstream

*hal-info-20071011 (23 Nov 2007)

  23 Nov 2007; Saleem Abdulrasool <compnerd@gentoo.org>
  +hal-info-20071011.ebuild:
  Version bump for HAL 0.5.10

  26 Sep 2007; Raúl Porcel <armin76@gentoo.org> hal-info-20070618.ebuild:
  x86 stable

  28 Aug 2007; Jeroen Roovers <jer@gentoo.org> hal-info-20070618.ebuild:
  Stable for HPPA (bug #185823).

  25 Aug 2007; Steve Dibb <beandog@gentoo.org> hal-info-20070618.ebuild:
  amd64 stable

  13 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  hal-info-20070618.ebuild:
  ppc. stable

  07 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  hal-info-20070618.ebuild:
  Stable on sparc

  06 Aug 2007; Raúl Porcel <armin76@gentoo.org> hal-info-20070618.ebuild:
  alpha stable

  14 Jul 2007; Raúl Porcel <armin76@gentoo.org> hal-info-20070618.ebuild:
  ia64 stable

  10 Jul 2007; Raúl Porcel <armin76@gentoo.org> hal-info-20070618.ebuild:
  Add ~alpha wrt #172789, thanks to Tobias Klausmann for testing

  26 Jun 2007; Brent Baude <ranger@gentoo.org> hal-info-20070425.ebuild,
  hal-info-20070516.ebuild, hal-info-20070618.ebuild:
  Changing ~ppc64 to -ppc64 on all hal-info ebuilds because of the dependancy
  on a broken (for ppc64) version of hal

*hal-info-20070618 (18 Jun 2007)
*hal-info-20070516 (18 Jun 2007)
