@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 01_dell_cdrom_nopoll.patch 1014 RMD160 42436b161a7d1edd17103b7a2e0fab23aedec59e SHA1 689c6c7319202a582e7ad350c5a964236d0d9598 SHA256 e243f1af9f87f43c8c2358516c8aee73f449e8ddd70059e7209d10027bf97111
 AUX 02_hardware_brightness_fixups.patch 1021 RMD160 e0428972bc20b2218484f4efc0ec8cc717056446 SHA1 8a288ea79dd1df83709bfd261e4c7f49484a8c60 SHA256 fa538c448162e78a3a0088251ecdd7accca87ad93abf75dde6e0246392130e4a
 AUX 03_feiya_memory_bar.patch 1002 RMD160 56f39919ed51d368aa0ab079b9ee9fb2a57f428c SHA1 196315b6735f84a03ab5332d1d126a5afaa9695d SHA256 8a55225bf216ade7785ff80d879e4df32d8924127872e7cfb9fa4d676e793e36
@@ -10,6 +13,13 @@ EBUILD hal-info-20070425.ebuild 713 RMD160 f759f27f065c067ad99a8bad80161d4faa588
 EBUILD hal-info-20070516.ebuild 718 RMD160 d3630fba32894f1a251fc85aacad066f57dc2ac0 SHA1 d5e0d633f7180fc66f2c85dba0b19b3406312ca9 SHA256 82e6dbf5ff38c5d5b9b967da80b71563d42831fede04c87ccb864461f0f2e7f9
 EBUILD hal-info-20070618.ebuild 718 RMD160 5b4ed5eeec405640cafa105b977d5fe4103c5a0d SHA1 6b5cb40149a5f4870a50eaad1a896428a3cd14b5 SHA256 843310294d4fbe53aa30752910ebbc6eb96f0a17cf6cd59df1ad5a65622f295e
 EBUILD hal-info-20071011.ebuild 662 RMD160 544713c7e0aca745181b3a45c626229ed9833579 SHA1 584291b91d5285449511cf33d32811a36b9afe52 SHA256 029aec66de5011584825f31afbcec22e20732791415359f32079aa9098b7c1d7
-EBUILD hal-info-20071030.ebuild 848 RMD160 8e681aba85ae075123f11794a1b8305b466f159e SHA1 bff00d63eb596f0a0d4535613dc600fe2c89c322 SHA256 b60ae6be40e02e59af1dd94e83dde9d65109d32cc25a5525ee27272e6890fe55
-MISC ChangeLog 3990 RMD160 a87a61092bd25e24f65e9a9e56b92ca61bfa1770 SHA1 ef2bad81447fb1c883592ea90d38b013d7801586 SHA256 ced8a425d529bb48d5521e9ddf696e64cdf56c957bdf6ec3550897e806cdaaf0
+EBUILD hal-info-20071030.ebuild 859 RMD160 a88fa6c1de6f6ee1ac99d6e6c91acb674490f0f1 SHA1 42538f03865b309d03a35b46fca6f6b35153dbe9 SHA256 9d478969bd6c1348e2b13db4efd430e82a73b17997e4e16eccc832d700735853
+MISC ChangeLog 4132 RMD160 e6242b8f8f3b2f0cc2af0ac6bcf51c325ce47a85 SHA1 1eaac2163d5ac4b5f6bb3215f084e69c5b163917 SHA256 645c4fdda86a6b5df5f1484f6d39f536c7ccc1c2654803e91d8014cd3b02849b
 MISC metadata.xml 222 RMD160 ef6286925330a9e740813a3d578b94633551a865 SHA1 2b6190af74b0097c61a7fc15832ef7f982bc4183 SHA256 aa81864aebd2d7c8c9a75e1773ae4fd85feef42339e86f3198c6bf9df356b7ea
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFHywt9iqiDRvmkBmIRAvchAKCbMKbtHU5iEaweJ+Lw9Dez5OU/0ACgnJ7J
+Y+1IX8nqnHMVcDgkDBP4iOo=
+=mioG
+-----END PGP SIGNATURE-----
