@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/hal-info/Attic/hal-info-20071030.ebuild,v 1.2 2008/01/10 18:04:00 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/hal-info/Attic/hal-info-20071030.ebuild,v 1.3 2008/03/02 20:17:59 dirtyepic Exp $
 
 inherit eutils
 
@@ -10,14 +10,14 @@ SRC_URI="http://hal.freedesktop.org/releases/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~hppa ~x86"
+KEYWORDS="~amd64 ~hppa ~mips ~x86"
 IUSE=""
 
 RDEPEND=">=sys-apps/hal-0.5.10"
 DEPEND="${RDEPEND}"
 
 src_unpack() {
-	unpack "${A}"
+	unpack ${A}
 	cd "${S}"
 
 	epatch "${FILESDIR}/01_dell_cdrom_nopoll.patch"
@@ -31,5 +31,5 @@ src_compile() {
 }
 
 src_install() {
-	make DESTDIR="${D}" install || die "install failed."
+	emake DESTDIR="${D}" install || die "install failed."
 }
