@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/hal-info
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/hal-info/Attic/ChangeLog,v 1.26 2008/01/10 18:04:00 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/hal-info/Attic/ChangeLog,v 1.27 2008/03/02 20:17:59 dirtyepic Exp $
+
+  02 Mar 2008; Ryan Hill <dirtyepic@gentoo.org> hal-info-20071030.ebuild:
+  Keyword ~mips.  Fix quoting on ${A} and use emake install.
 
   10 Jan 2008; Jeroen Roovers <jer@gentoo.org> hal-info-20071011.ebuild,
   hal-info-20071030.ebuild:
